- UI update: css, validation - 0.1.2

--- a/plugins/activedirectory/app/views/activedirectory/index.html.erb
+++ b/plugins/activedirectory/app/views/activedirectory/index.html.erb
@@ -20,72 +20,66 @@
 -->
 
 <% content_for :head do %>
-<!--   <%= javascript_include_tag :defaults %> -->
 
-  <style type="text/css">
-    label.error { float: none; padding-left: 10em }
-  </style>
+  <%= javascript_include_tag "validation.js" %>
+  <script type="text/javascript">
+  
+    $(document).ready(function() {
 
-  <% if RAILS_ENV == 'development' %>
-    <%= javascript_include_tag "validation.js" %>
-  <% end %>
+      $("#activedirectoryForm").validate();
+      // make the error message translatable - override the default messsage
+      $.extend($.validator.messages, {
+	    required: "<%= _("This field is required.") -%>",
+      });
+    });
+  </script>
 
 <% end %>
 
 <% disabled = !@permissions[:write] %>
 
-<div class="nav-buttons">
-  <% if !disabled -%>
-  <div id="progress" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>
-  <% end -%>
-</div>
+<div class='plugin-icon'><img src='../icons/yast-samba-client.png'/> <%= _("Active Directory") %></div>
+<div class='plugin-content'>
 
-  <div class='plugin-icon'><img src='../icons/yast-samba-client.png'/> <%= _("Active Directory") %></div>
-  <div class='plugin-content'>
+<%= render :partial => 'shared/missing_write_permissions' if disabled %>
 
     <% form_for(:activedirectory, @activedirectory, :url => { :action => 'update' },
-      :html => { :method => :put, :id => 'activedirectory_form', :onsubmit => "$('#progress').show()", :autocomplete => :off }
+      :html => { :method => :put, :id => 'activedirectoryForm', :onsubmit => "if ($('#activedirectoryForm').valid()) $('#progress').show()", :autocomplete => :off }
     ) do |f| %>
 
-	  <div class="activedirectory-content" style="padding-bottom: 10px">
+	<fieldset>
 	    <p>
 	      <%= check_box 'activedirectory', :enabled, {:disabled => disabled, :checked => @activedirectory.enabled}, true,false -%>
 	      <%= _("Enable Authentication of AD users") %>
 	    </p>
             <p>
               <%= label_tag :activedirectory_domain, _("Active Directory Domain") %>
-            </p>
-            <p>
               <%= text_field :activedirectory, :domain, :disabled => disabled, :class => 'required'  %>
             </p>
        	    <p>
 	      <%= check_box 'activedirectory', :create_dirs, {:disabled => disabled, :checked => @activedirectory.create_dirs}, true,false -%>
 	      <%= _("Create Home Directory on Login") %>
 	    </p>
-	    <% if @activedirectory.respond_to? :administrator %>
+	</fieldset>
+	<% if @activedirectory.respond_to? :administrator %>
+	<fieldset>
             <p>
               <%= label_tag :activedirectory_administrator, _("Adminstrator User Name") %>
-            </p>
-            <p>
               <%= text_field :activedirectory, :administrator, :disabled => disabled, :class => 'required'  %>
             </p>
             <p>
               <%= label_tag :activedirectory_password, _("Password") %>
-            </p>
-            <p>
               <%= password_field :activedirectory, :password, :disabled => disabled, :class => 'required'  %>
             </p>
             <p>
               <%= label_tag :activedirectory_machine, _("Machine Account") %>
-            </p>
-            <p>
               <%= text_field :activedirectory, :machine, :disabled => disabled  %>
             </p>
-	    <% end %>
-	    <p>
-              <%= form_send_buttons :onclick=>"Element.show('progress')" %>
-            </p>
-
+	</fieldset>
+	<% end %>
+	<div class="nav-buttons">
+	    <%= form_send_buttons :disabled => disabled, :onclick=>"Element.show('progress')"%>
+	</div>
     <% end %>
 
   </div>
