--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -56,6 +56,7 @@
 		validateTime("currenttime");
 
 		$("#timeForm").validate({ 
+		  onkeyup: function(element) { this.element(element); }, 
 		  rules:{
 			 ntp_server: {
 				required: "#ntp_sync:checked",
@@ -141,6 +142,7 @@
 	 <% form_tag '/time/update', {:id => "timeForm", :class => 'container', :onsubmit => "return submitTime();"} do %>
     <%#TODO tooltip for form <div> _("Table for settings timezone for target machine.")  </div>%>
   <fieldset class="small-fields small-labels">
+    <legend><span><%= _("Timezone")%></span></legend>
     <p>
       <label for="region"><%=_("Region")%></label> 
       <!-- 300px is good enough for all our region and time zone names -->
@@ -168,6 +170,7 @@
     <% end %>
   </fieldset>
   <fieldset class="small-fields small-labels">
+    <legend><span><%= _("Time")%></span></legend>
     <p>
       <input type="radio" name="timeconfig" value="manual" onclick="enable();" id="timeconfig_manual"     
         <%= "disabled=\"disabled\"" if disabled%>
