- new control panel for updates module - visual feedback for the user during updates lookup - css code clean up - several IE8 fixes

--- a/plugins/software/app/views/patch_updates/_patches.html.erb
+++ b/plugins/software/app/views/patch_updates/_patches.html.erb
@@ -33,10 +33,10 @@ You may need to reload the page after applying the patch.") -%></p>
 <% end %>
 
 <table summary="" class="patches" <%= @patch_updates.empty? ? "style=\"visibility: hidden;\"" : "" %> >
-  <tr>
+  <tr id="first_row">
     <th class="first checkbox" width=8% >
       <input type="checkbox" name="All" onclick="check_all()" id="All" style="float: left;">
-      <div style="margin-top: 2px;"><%=_("Check")%></div>
+      <div style="margin-top:1px;"><%=_("Check")%></div>
     </th>
     <th width=5%><%=_("Kind")%></th>
     <th width=15%><%=_("Name")%></th>
@@ -70,7 +70,7 @@ You may need to reload the page after applying the patch.") -%></p>
       <td class="icon"><%=h patch_update.repo %></td>
       <% if @permissions[:install] %>
         <td class="icon"><%= link_to image_tag("/icons/system-software-install.png"\
-              , :alt =>  "install", :class=>"icon", :border => "0"),\
+              , :alt =>  "install", :class=>"icon", :style=>"width:24px; height:24px;", :border => "0"),\
             :controller => 'patch_updates', :id => patch_update.resolvable_id,\
             :onclick=>"$('#progress').show()", :method => :post, :action => "install" %></td>
         <% end %>
