--- a/webclient/app/sass/_colors.sass
+++ b/webclient/app/sass/_colors.sass
@@ -41,4 +41,23 @@
 !c_focused_input = !c_anchor_underline
 !c_content_shadow = mix(!c_black, !c_background, 30%)
 
+/* Input elements colors
+!c_border = #999
+!c_border_focused = #1E90FF
+
+!c_text = #333
+!c_text_hovered = #f2f2f2
+!c_active = #f2f2f2
+!c_text_disabled = #aaa
+
+!c_text_hovered_shadow = #222
+
+!c_input_background_white = #fff
+!c_input_background_hover = #3494f2
+!c_input_active_background = #2966FF
+
+!c_input_disabled = #eee
+
+
+
 
