--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -61,7 +61,7 @@ body
   color: !c_text
   font-family: Trebuchet MS, Helvetica, sans-serif
   width: 100%
-  height: 99%
+  height: 100%
   margin: 0
   padding: 0
 
@@ -214,6 +214,9 @@ ul li
   font-size: 0.8em
   padding: 0 10px 0
   width: 97%
+
+.module_header
+  margin: 10px
 
 #footer
   min-width: 640px
