--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -18,91 +18,87 @@
 #++
 */
 
-/* CSS Hacks if needed */
+  /* CSS Hacks if needed */
   /* IE */ 
     /* a.button{ padding:3px 6px 3px 6px\9; } */
   /* FF */
     /* a.button, x:-moz-any-link, x:default { padding:3px 8px 3px 8px; } */
   /* Webkit */
     /*@media screen and (-webkit-min-device-pixel-ratio:0) { a.button{ padding:3px 6px 3px 6px; }} */
-/* CSS Hacks END */
+  /* CSS Hacks END */
 
-button[type="submit"]::-moz-focus-inner, input[type="submit"]::-moz-focus-inner, input[type="button"]::-moz-focus-inner { border: 0; }
-input[type="text"], input[type="password"], select { margin:0px; padding:0px;}
+  button[type="submit"]::-moz-focus-inner, input[type="submit"]::-moz-focus-inner, input[type="button"]::-moz-focus-inner { border: 0; }
+  input[type="text"], input[type="password"], select { margin:0px; padding:0px;}
 
-input[type="text"], input[type="submit"], button[type="submit"], input[type="button"], a.button {
-  font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
-  font-weight:bold; /*important for input field and buttons right of it*/
-  font-size: 13px;
-  border: 1px solid #999;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px; 
-}
+  input[type="text"], input[type="submit"], button[type="submit"], input[type="button"], a.button {
+    font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
+    font-weight:bold; /*important for input field and buttons right of it*/
+    font-size: 13px;
+    border: 1px solid #999;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    -webkit-border-radius:3px;
+  }
 
-select { border: 1px solid #999; -moz-border-radius: 3px; -webkit-border-radius: 3px;}
-input[type="password"] { border: 1px solid #999999; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
+  select { border: 1px solid #999; -moz-border-radius: 3px; -webkit-border-radius: 3px;}
+  input[type="password"] { border: 1px solid #999999; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
 
-input[type="text"], input[type="password"], select { padding: 3px;}
-input[type="text"]:focus, input[type="password"]:focus { border-color: #1E90FF; }
+  input[type="text"], input[type="password"], select { padding: 3px;}
+  input[type="text"]:focus, input[type="password"]:focus { border-color: #1E90FF; }
 
-input[type="submit"], input[type="button"], button[type="submit"], a.button {-moz-box-sizing:border-box; box-sizing:border-box; margin:0; padding:0;}
-input[type="submit"], input[type="button"], button[type="submit"], a.button {
-  color: #333;
-  cursor: pointer;
-  background: url("/images/gradientx40.png") repeat-x white;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 0 rgba(255, 255, 255, 0.9);
-  text-decoration:none;
-  padding:3px 6px 3px 6px;
-}
+  input[type="submit"], input[type="button"], button[type="submit"], a.button {-moz-box-sizing:border-box; box-sizing:border-box; margin:0; padding:0;}
+  input[type="submit"], input[type="button"], button[type="submit"], a.button {
+    color: #333;
+    cursor: pointer;
+    background: url("/images/gradientx40.png") repeat-x white;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 0 rgba(255, 255, 255, 0.9);
+    text-decoration:none;
+    padding:3px 6px 3px 6px;
+  }
 
-a.button:-moz-any-link, a.button:default { padding:3px 8px 3px 7px; } 
+  a.button:-moz-any-link, a.button:default { padding:3px 8px 3px 7px; } 
 
-/* HOVER, ACTIVE, DISABLED */
-input[type="submit"]:hover,  input[type="button"]:hover, button[type="submit"]:hover, a.button:hover {
-  background:url('/images/gradientx40.png') repeat-x #3494f2;
-  color: #f2f2f2;
-  text-shadow: 0px -1px 1px #222222; 
-}
+  /* HOVER, ACTIVE, DISABLED */
+  input[type="submit"]:hover,  input[type="button"]:hover, button[type="submit"]:hover, a.button:hover {
+    background:url('/images/gradientx40.png') repeat-x #3494f2;
+    color: #f2f2f2;
+    text-shadow: 0px -1px 1px #222222; 
+  }
 
-input[type="submit"]:active, input[type="button"]:active, button[type="submit"]:active, a.button:active {
-  color: #f2f2f2;
-  background: url("../images/gradientx60.png") repeat-x #2966FF; 
-}
+  input[type="submit"]:active, input[type="button"]:active, button[type="submit"]:active, a.button:active {
+    color: #f2f2f2;
+    background: url("../images/gradientx60.png") repeat-x #2966FF; 
+  }
 
-intput[disabled] { background-color:#eee; }
-input[type="submit"][disabled], input[type="button"][disabled], button[type="submit"][disabled], a.button[disabled] {
-  color: #aaa;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 0 rgba(255, 255, 255, 0.9);
-  background: url("../images/gradientx40.png") repeat-x #fff; 
-}
+  intput[disabled] { background-color:#eee; }
+  input[type="submit"][disabled], input[type="button"][disabled], button[type="submit"][disabled], a.button[disabled] {
+    color: #aaa;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 0 rgba(255, 255, 255, 0.9);
+    background: url("../images/gradientx40.png") repeat-x #fff; 
+  }
 
 
 /* CLASSES INPUT ELEMENTS */
-  .small { width:150px; }
-  .medium { width:250px; }
-  .big { width:350px; }
-  .bigger { width:400px;}
-  .biggest { width:550px; }
-
   input[type="text"].without_border_right {
     float: left;
     border-right-width: 0px;
-    -moz-border-radius-topright: 0px;
-    -moz-border-radius-bottomright: 0px;
-    -webkit-border-top-right-radius: 0px;
-    -webkit-border-bottom-right-radius: 0px; 
+    border-radius: 3px 0px 0px 3px;
+    -khtml-border-radius: 3px 0px 0px 3px;
+    -moz-border-radius: 3px 0px 0px 3px;
+    -webkit-border-radius: 3px 0px 0px 3px;
    }
 
    input[type="submit"].without_border_left {
     border-left-width: 1px;
-    -moz-border-left-topright: 0px;
-    -moz-border-left-bottomright: 0px;
-    -webkit-border-top-left-radius: 0px;
-    -webkit-border-bottom-left-radius: 0px; 
+    border-radius: 0px 3px 3px 0px;
+    -khtml-border-radius: 0px 3px 3px 0px;
+    -moz-border-radius: 0px 3px 3px 0px;
+    -webkit-border-radius: 0px 3px 3px 0px;
    }
-/* END */
+  
 
-/* MODULE SPECIFIC ADAPTATIONS */
+  /* MODULE SPECIFIC ADAPTATIONS */
   /*  LOGIN  */
   #login-dialogue input[type="password"], #login-dialogue input[type="text"] { width:100%; }
 
@@ -130,6 +126,175 @@ input[type="submit"][disabled], input[type="button"][disabled], button[type="sub
   }
 
   /* TIME */
-  /* Fix for bug 601309 - Radio buttons and checkboxes look ugly in IE8  */
+    /* Fix for bug 601309 - Radio buttons and checkboxes look ugly in IE8  */
   input[type="radio"], input[type="checkbox"] { border: none; background: none; vertical-align:top;}
-/* END */
+
+  /* UPDATES */
+  #parent {
+    display: none;
+    top:0; left:0;
+    position: absolute;
+    width:100%;
+    margin: auto; /* Div centered */
+    min-height: 100%; /* min height for modern browser */
+    height:auto !important; /* Important rule for modern browser */
+    height:100%; /* min height for IE */
+    overflow: hidden !important; /* hide FF scroll bar */ 
+  }
+
+  #shade {
+    z-index:1000;
+    top:0; left:0;
+    position: absolute;
+    width:100%;
+    margin: auto; /* Div centered */
+    min-height: 100%; /* min height for modern browser */
+    height:auto !important; /* Important rule for modern browser */
+    height:100%; /* min height for IE */
+    overflow: hidden !important; /* hide FF scroll bar */ 
+    background-color: rgba(100, 100, 100, 0.5);
+  }
+
+  #wait {
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    -webkit-border-radius:3px;
+    position: relative;
+    background-color: #fff;
+    border: 5px solid grey;
+    font-size:20px; 
+    color:#1C94C4;
+    margin-left: auto;
+    margin-right: auto;
+    width:auto;
+    padding:10px;
+    text-align:center;
+    z-index:3000;
+  }
+
+  #updates_panel button[type="submit"] {
+    display:block;
+    float:left;
+    border:1px solid #999;
+    font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
+    font-size:12px;
+    line-height:130%;
+    text-decoration:none;
+    font-weight:bold;
+
+    cursor:pointer;
+    padding:6px 10px 6px 7px; /* Links */
+
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    -webkit-border-radius: 3px;
+
+    color:#333;
+    background:url('/images/gradientx40.png') repeat-x #fff;
+    text-shadow:0 -1px 0 rgba(0,0,0,0.10), 0 1px 0 rgba(255,255,255,0.9);
+  }
+
+  #updates_panel button[type=submit]{
+    width:auto;
+    overflow:visible;
+    padding:5px 10px 3px 7px; /* IE6 */
+  }
+
+  #updates_panel button[type=submit] {
+    padding:5px 10px 5px 7px; /* Firefox */
+    line-height:17px; /* Safari */
+  }
+
+  *:first-child+html button[type]{
+    padding:5px 10px 3px 7px; /* IE7 */
+  }
+
+  #updates_panel button img, #updates_panel a img{
+    margin:0 3px -3px 0 !important;
+    padding:0;
+    border:none;
+    width:16px;
+    height:16px;
+  }
+
+  #updates_panel button.left {
+    border-right-width:1px;
+    border-radius: 3px 0px 0px 3px;
+    -khtml-border-radius: 3px 0px 0px 3px;
+    -moz-border-radius: 3px 0px 0px 3px;
+    -webkit-border-radius: 3px 0px 0px 3px;
+  }
+
+
+  #updates_panel button.left:hover, #updates_panel button.middle:hover, #updates_panel button.right:hover{
+    background:url('/images/gradientx60.png') repeat-x #aaa;
+    color:#f2f2f2;
+    text-shadow: 0px -1px 1px #222; 
+  }
+
+  #updates_panel button.left:active, button.middle:active, button.right:active {
+    color:#fff;
+    background:url('/images/gradientx60.png') repeat-x #00D5FF;
+  }
+
+  #updates_panel button.middle {
+    border-right:1px solid #999;
+    border-left:0px;
+
+    border-right-width:1px;
+    border-radius: 0px;
+    -khtml-border-radius: 0px;
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
+  }
+
+  #updates_panel button.right {
+    border-left:0px;
+    border-right:1px solid #999;
+
+    border-radius: 0px 3px 3px 0px;
+    -khtml-border-radius: 0px 3px 3px 0px;
+    -moz-border-radius: 0px 3px 3px 0px;
+    -webkit-border-radius: 0px 3px 3px 0px;
+ }
+
+  #updates_panel button.active {
+    background:url('/images/gradientx60.png') repeat-x  0 0 #3399cc;
+    color:#eee;
+    text-shadow:0 -1px 1px rgba(0,0,0,0.5);  
+    border-top: 1px solid #999;
+    border-bottom: 1px solid #999;
+  }
+
+  .patches { width:100%; }
+  .patches a {border:0px;}
+
+  #patchesd {
+    background-color:#eee;
+  }
+
+  #first_row {
+    color:#333;
+    text-shadow:0 -1px 0 rgba(0,0,0,0.10), 0 1px 0 rgba(255,255,255,0.9);
+    background-color:#eee;
+    text-align:middle;
+  }
+
+  table.patches {
+    margin:0px;
+    border-spacing: 0;
+    border-collapse: collapse;
+    background-color: white;
+  }
+
+  table.patches th { padding-bottom:5px; text-align:middle;}
+
+  table.patches td {
+    margin: 0;
+    font-size:12px;
+    padding: 3px;
+    border: 1px dotted #ccc;
+    border-width:0px 0px 1px 0px;
+  }
