- exclude ie_fixes.css from the liste of the files to be minified to prevent it from using in other browsers - do not minify the ie_fixes.css because of possible use of IE hacks, which could be broken by css compressing

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -22,7 +22,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <!--[if IE]>
-  <%= stylesheet_link_tag "ie_fixes" %>
+  <%= stylesheet_link_tag "ie/ie_fixes" %>
 <![endif]--> 
    
   <% if JSMIN == true %>
