--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -38,7 +38,7 @@
 
  <style type="text/css">
     .pad1_2em {
-	padding: 1em 2em;
+/* 	padding: 1em 2em; */
     }
     tr {
 	border: solid 1px #ddd;
@@ -54,6 +54,8 @@
     #password-strength {
 	left: 0em;
     }
+  
+/*     .nav-buttons {padding:0; margin:0px;} */
  </style>
 
  <% javascript_tag do %>
@@ -169,6 +171,7 @@
           delay: 100
   });
 
+  
 
 });//document.ready
 
@@ -178,14 +181,42 @@
 <div class='plugin-icon'><img alt="yast-users" src='/icons/yast-users.png'/><%=_("Users")%></div>
 <div class="plugin-content">
 
-<form action="#" id="quicksearch" class="pad1_2em">
+<!--<form action="#" id="quicksearch" class="pad1_2em">
   <label><%= _("Filter:") %></label>
   <input type="text" id="users_search"/>
-</form>
+</form>-->
+
+<div id="search-userbar">
+  <div id="home-container">
+    <div id="home">		
+      <%=link_to image_tag ("home.png", :id=>"home_image"), :controller=>"controlpanel", :action => :index %>
+    </div>
+  </div>
+  <span style="clear:both; overflow:hidden;"></span>
+  <div id="search-container">
+    <form action="#" id="quicksearch">
+      <label style="font-weight:bold; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.9);"><%= _("Filter:") %></label>
+<!--       <label><%= _("Filter:") %></label> -->
+      <input type="text" id="users_search"/>
+    </form>
+   </div>
+   <span style="clear:both; overflow:hidden;"></span>
+   <div id="link-container">
+    <div id="action_links" class="action_links">	
+      <% if @permissions[:useradd] %>
+	<%=link_to image_tag ("/icons/yast-users.png", :class=>"icons") +  _("Add New User"), :action => :new %>
+	<label>|</label>
+      <% end %>      
+      <%=link_to image_tag ("/icons/yast-groups.png", :class=>"icons") +  _("Manage Groups"), :controller => "groups" %>
+    </div>
+  </div>
+</div>
+
+<div style="clear:both; overflow:hidden;"></div>
 
 <div class='pad1_2em'>
 <% if @permissions[:useradd] %>
-<%= link_to _("Add New User"), :action => :new -%>
+<!-- <%= link_to _("Add New User"), :action => :new -%> -->
 <% end %>
 
  <div id="users" class="accordion">
