--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -298,3 +298,64 @@
     border: 1px dotted #ccc;
     border-width:0px 0px 1px 0px;
   }
+
+/* USERS & GROUPS */
+  #search-userbar {
+    padding:3px 3px 2px 3px;
+    margin-left:12px;
+    margin-top:12px;
+    margin-bottom:5px;
+/*     margin:10px 0px 10px 12px; */
+
+    float: left;
+    border:1px solid #ccc;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    -webkit-border-radius:3px; 
+    width:928px;
+    background:url('../images/gradient40-60.png') repeat-x #f5f5f5; 
+  }
+  
+  #home-container, #search-container,#link-container { float:left; padding:0; }
+
+  #home { 
+    width:18px; 	
+    height:18px; 
+    padding:2px; 
+    vertical-align:middle;
+
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -khtml-border-radius: 50%;
+    -webkit-border-radius: 50px;
+
+    background: url('../images/gradientx40.png') repeat-x #fff;
+    border:2px solid #999;
+    margin-right:20px; 
+    overflow: hidden;
+  }
+  
+  #home:hover {background: url('../images/gradientx60.png') repeat-x #ddd; border:2px solid  #1E90FF;}
+  #home a {text-decoration:none; border:none;}
+  #home_image {width:18px; height:18px; }
+
+  .action_links {float:left;
+    margin-left:5px; 
+    border:1px solid black;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.9);
+    padding:2px 5px;
+    border:1px solid #999; 
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    -webkit-border-radius:3px;
+    background:url('../images/gradientx40.png') repeat-x #eee;
+  }
+
+  .action_links label { float:left; margin:0px 5px; color:#999;}
+  .action_links a {float:left; margin-top:2px; vertical-align:middle; border:none;}
+  .action_links a:hover {color:#1E90FF; text-shadow: 0 1px 0 #eee;}
+
+  .icons {float:left; width:16px; height:16px; margin-right:5px; vertical-align:text-bottom;}
+  
