--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -343,7 +343,7 @@
   .action_links {float:left;
     margin-left:5px; 
     border:1px solid black;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.9);
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2), 0 1px 0 rgba(225, 225, 225, 0.9);
     padding:2px 5px;
     border:1px solid #999; 
     border-radius: 3px;
@@ -355,7 +355,7 @@
 
   .action_links label { float:left; margin:0px 5px; color:#999;}
   .action_links a {float:left; margin-top:2px; vertical-align:middle; border:none;}
-  .action_links a:hover {color:#1E90FF; text-shadow: 0 1px 0 #eee;}
+  .action_links a:hover {color:#1E90FF;}
 
   .icons {float:left; width:16px; height:16px; margin-right:5px; vertical-align:text-bottom;}
   
